# garmin-golf-cn

./: .gitignore  LICENSE  README.md  pyproject.toml
bookmarklet/: build.py  export.js
core/: __init__.py  sg.py  terms.py
core/baselines/: README.md  _generate.py  amateur_10.json  amateur_15.json  amateur_20.json  amateur_25.json  amateur_5.json  amateur_scratch.json  pga_tour.json
docs/: bookmarklet-cn.md  garmin-api-reference.md  strokes-gained-explained-cn.md
examples/: demo_simulated.py  sample_round.json
scripts/: fetch_garmin.py  fetch_garmin_pw.py
