[project]
name = "garmin-golf-cn"
version = "0.1.0"
description = "给中国佳明高尔夫用户的开源 Strokes Gained 分析工具"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "许英龙" }]
keywords = ["golf", "garmin", "strokes-gained", "chinese", "analysis"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
fetch = ["garminconnect>=0.3.0"]
report = ["weasyprint>=60.0", "jinja2>=3.1"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/xuyinglon43-gif/garmin-golf-cn"
Issues = "https://github.com/xuyinglon43-gif/garmin-golf-cn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
